# xmonad-config

./: .gitignore  send_xmonad_evt.hs  stack.yaml  xmobarrc  xmonad-config.cabal  xmonad.hs
lib/: DocksFullscreen.hs  DynamicTopicSpace.hs  ManageNext.hs  Scratchpad.hs  XMobar.hs
lib/Config/: Common.hs  Mappings.hs  Topics.hs
lib/XMobar/: Property.hs  XMobar.hs
lib/XMonad/Actions/: DynamicTopicSpace.hs  XMonadDisplay.hs
lib/XMonad/Config/: Desktop.hs
lib/XMonad/Hooks/: DocksFullscreen.hs  EwmhDesktops.hs  LogApplet.hs  ManageNext.hs
lib/XMonad/Layout/: Maximize.hs
lib/XMonad/Util/: EZConfig.hs  Keys.hs  Terminal.hs  XMobar.hs
lib/XMonad/Util/XMobar/: Property.hs  XMobar.hs
lib/XMonadXMobar/: Property.hs
