cabal-version:  >= 1.6
build-type:     Simple
name:           xmonad-config
version:        0.0.1
author:         Nadrieril

executable xmonad
    hs-source-dirs: ., lib
    main-is:       xmonad.hs
    other-modules:
          Config.Topics
        , XMonad.Actions.DynamicTopicSpace
        , XMonad.Hooks.DocksFullscreen
        , XMonad.Hooks.ManageNext

    build-depends:
          base
        , safe
        , containers
        , directory
        , unix
        , mtl
        , dbus
        , utf8-string

        , xmonad
        , xmonad-contrib
        , xmonad-extras

    ghc-options: -Wall -fno-warn-missing-signatures -fno-warn-name-shadowing
